Add example greedy search using associated moves
Add example greedy search using associated moves for the TSP problem.
The number of cities and the random seed can be adjusted using the
sliders in the `TSP-demo.ipynb` notebook.  The search can be run by
executing the remaining cells in the notebook, after which the cost at
each iteration will be plotted.

--- a/TSP.ipynb
+++ b/TSP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:71b41862f5c4dd0a913fc644b6c4af295b152764fea7df1a60c2128637630864"
+  "signature": "sha256:a891e0c4e694984b40f0507ae92b7c5b78717fac8182f14664f2cff03e59cd0f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,69 +16,12 @@
       "\n",
       "import numpy as np\n",
       "import pandas as pd\n",
-      "from IPython.display import display\n",
-      "\n",
-      "\n",
-      "seed = 1314\n",
-      "\n",
-      "np.random.seed(seed)\n",
-      "\n",
-      "cities_count = 5\n",
-      "distinct_pairs = [(i, j)\n",
-      "                  for i in xrange(cities_count)\n",
-      "                  for j in xrange(i + 1, cities_count)]\n",
-      "distances_dict = OrderedDict(zip(distinct_pairs,\n",
-      "                                 np.random.randint(0, 100,\n",
-      "                                                   cities_count *\n",
-      "                                                   (cities_count - 1) / 2)))\n",
-      "display(distances_dict.items())\n",
-      "distances = np.zeros((cities_count, cities_count), dtype=int)\n",
-      "# distances[map(list, distances_dict.keys())] = distances_dict.values()\n",
-      "distances[zip(*distances_dict.keys())] = distances_dict.values()\n",
-      "distances.T[zip(*distances_dict.keys())] = distances_dict.values()\n",
-      "distances"
+      "from IPython.display import display"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "/home/christian/.virtualenvs/vpr-x64/local/lib/python2.7/site-packages/matplotlib/__init__.py:740: UserWarning: Found matplotlib configuration in ~/.matplotlib/. To conform with the XDG base directory standard, this configuration location has been deprecated on Linux, and the new location is now '/home/christian/.config'/matplotlib/. Please move your configuration there to ensure that matplotlib will continue to find it in the future.\n",
-        "  _get_xdg_config_dir())\n"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "[((0, 1), 69),\n",
-        " ((0, 2), 27),\n",
-        " ((0, 3), 40),\n",
-        " ((0, 4), 76),\n",
-        " ((1, 2), 69),\n",
-        " ((1, 3), 82),\n",
-        " ((1, 4), 32),\n",
-        " ((2, 3), 15),\n",
-        " ((2, 4), 68),\n",
-        " ((3, 4), 39)]"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 1,
-       "text": [
-        "array([[ 0, 69, 27, 40, 76],\n",
-        "       [69,  0, 69, 82, 32],\n",
-        "       [27, 69,  0, 15, 68],\n",
-        "       [40, 82, 15,  0, 39],\n",
-        "       [76, 32, 68, 39,  0]])"
-       ]
-      }
-     ],
-     "prompt_number": 1
+     "outputs": [],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -117,6 +60,63 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "seed = 1314\n",
+      "\n",
+      "np.random.seed(seed)\n",
+      "\n",
+      "cities_count = 5\n",
+      "distinct_pairs = [(i, j)\n",
+      "                  for i in xrange(cities_count)\n",
+      "                  for j in xrange(i + 1, cities_count)]\n",
+      "distances_dict = OrderedDict(zip(distinct_pairs,\n",
+      "                                 np.random.randint(0, 100,\n",
+      "                                                   cities_count *\n",
+      "                                                   (cities_count - 1) / 2)))\n",
+      "display(distances_dict.items())\n",
+      "distances = np.zeros((cities_count, cities_count), dtype=int)\n",
+      "# distances[map(list, distances_dict.keys())] = distances_dict.values()\n",
+      "distances[zip(*distances_dict.keys())] = distances_dict.values()\n",
+      "distances.T[zip(*distances_dict.keys())] = distances_dict.values()\n",
+      "distances"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "[((0, 1), 69),\n",
+        " ((0, 2), 27),\n",
+        " ((0, 3), 40),\n",
+        " ((0, 4), 76),\n",
+        " ((1, 2), 69),\n",
+        " ((1, 3), 82),\n",
+        " ((1, 4), 32),\n",
+        " ((2, 3), 15),\n",
+        " ((2, 4), 68),\n",
+        " ((3, 4), 39)]"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "array([[ 0, 69, 27, 40, 76],\n",
+        "       [69,  0, 69, 82, 32],\n",
+        "       [27, 69,  0, 15, 68],\n",
+        "       [40, 82, 15,  0, 39],\n",
+        "       [76, 32, 68, 39,  0]])"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -246,13 +246,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 35,
        "text": [
         "249"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -313,13 +313,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 27,
        "text": [
-        "[3, 3, 0, -3, -3]"
+        "[1, -1, 1, -1, 0]"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 27
     },
     {
      "cell_type": "heading",
@@ -343,13 +343,118 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 28,
        "text": [
-        "array([ 0,  1, -1,  0,  1])"
+        "array([ 0,  0,  2,  2, -1])"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "min_index = np.where(associated_move_pair_ids\n",
+      "                     [sorted_by_move_pair] >= 0)[0][0]\n",
+      "min_index"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "associated_move_pair_ids[sorted_by_move_pair]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 33,
+       "text": [
+        "array([-1,  0,  0,  2,  2])"
+       ]
+      }
+     ],
+     "prompt_number": 33
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "delta_costs = city_delta_costs(tour, proposed_moves)\n",
+      "delta_costs"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 37,
+       "text": [
+        "array([-26, -24, -45, -83,   0])"
+       ]
+      }
+     ],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "move_pair_ids = associated_move_pair_ids[sorted_by_move_pair[min_index::2]]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "delta_costs[move_pair_ids] = delta_costs[sorted_by_move_pair[min_index::2]] + delta_costs[sorted_by_move_pair[min_index + 1::2]]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 43
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "delta_costs"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 44,
+       "text": [
+        "array([ -50,  -24, -128,  -83,    0])"
+       ]
+      }
+     ],
+     "prompt_number": 44
     },
     {
      "cell_type": "heading",
@@ -432,13 +537,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 34,
        "text": [
-        "array([  1,   7,   0, -43,  29])"
+        "array([-26, -24, -45, -83,   0])"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -453,13 +558,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 31,
        "text": [
-        "array([2, 0, 3, 1, 4])"
+        "array([4, 0, 1, 2, 3])"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
