--- a/TSP.ipynb
+++ b/TSP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:084e977490d78c16449b16f2bf7e15f3db83451385475589b81c66c7d2d5886b"
+  "signature": "sha256:07b320ed28480d61f9cfe45396eccde4adf1c5f6b32b709ce4102f1ba80488b9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,8 +22,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 70
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/home/christian/.virtualenvs/vpr-x64/local/lib/python2.7/site-packages/matplotlib/__init__.py:740: UserWarning: Found matplotlib configuration in ~/.matplotlib/. To conform with the XDG base directory standard, this configuration location has been deprecated on Linux, and the new location is now '/home/christian/.config'/matplotlib/. Please move your configuration there to ensure that matplotlib will continue to find it in the future.\n",
+        "  _get_xdg_config_dir())\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -61,7 +70,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 144
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -103,7 +112,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 164
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -173,7 +182,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 145,
+       "prompt_number": 4,
        "text": [
         "array([[ 0, 69, 27, 40, 76],\n",
         "       [69,  0, 69, 82, 32],\n",
@@ -183,7 +192,7 @@
        ]
       }
      ],
-     "prompt_number": 145
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -203,7 +212,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 146
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -223,7 +232,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 148
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -245,7 +254,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 149
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -259,13 +268,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 165,
+       "prompt_number": 8,
        "text": [
         "249"
        ]
       }
      ],
-     "prompt_number": 165
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -292,13 +301,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 153,
+       "prompt_number": 9,
        "text": [
         "[3, 3, 0, -3, -3]"
        ]
       }
      ],
-     "prompt_number": 153
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -319,7 +328,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 166
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -344,13 +353,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 155,
+       "prompt_number": 11,
        "text": [
         "1"
        ]
       }
      ],
-     "prompt_number": 155
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -364,13 +373,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 156,
+       "prompt_number": 12,
        "text": [
         "array([-1,  0,  0,  1,  1])"
        ]
       }
      ],
-     "prompt_number": 156
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -382,7 +391,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 157
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -393,7 +402,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 158
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -405,7 +414,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 159
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -420,7 +429,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 160
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -440,7 +449,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 167
+     "prompt_number": 17
     },
     {
      "cell_type": "heading",
@@ -462,12 +471,37 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "proposed_moves"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "[3, 3, 0, -3, -3]"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Note: This \"fancy-table\" is taken from [here][1].  Filtering doesn't seem to work on\n",
+      "# the table here... perhaps filtering only works on text columns?\n",
+      "#\n",
+      "# [1]: http://www.snip2code.com/Snippet/47354/Fancy-Table-Using-IPython-Widgets\n",
       "fancy_table(tsp_data, start_cols=['tour-city'])"
      ],
      "language": "python",
@@ -481,39 +515,93 @@
         "    <tr style=\"text-align: right;\">\n",
         "      <th></th>\n",
         "      <th>tour-city</th>\n",
+        "      <th>left-city</th>\n",
+        "      <th>right-city</th>\n",
+        "      <th>left-cost</th>\n",
+        "      <th>right-cost</th>\n",
+        "      <th>swap-id</th>\n",
+        "      <th>delta-costs</th>\n",
+        "      <th>swap-deltas</th>\n",
+        "      <th>assessment</th>\n",
+        "      <th>new-city</th>\n",
         "    </tr>\n",
         "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>0</th>\n",
         "      <td> 2</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 27</td>\n",
+        "      <td> 68</td>\n",
+        "      <td> 0</td>\n",
+        "      <td>  1</td>\n",
+        "      <td>-42</td>\n",
+        "      <td>  True</td>\n",
+        "      <td> 3</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
+        "      <td> 4</td>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 68</td>\n",
+        "      <td> 32</td>\n",
+        "      <td> 1</td>\n",
+        "      <td>  7</td>\n",
+        "      <td> 36</td>\n",
+        "      <td> False</td>\n",
         "      <td> 4</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
         "      <td> 1</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 3</td>\n",
+        "      <td> 32</td>\n",
+        "      <td> 82</td>\n",
+        "      <td>-1</td>\n",
+        "      <td>  0</td>\n",
+        "      <td> 36</td>\n",
+        "      <td> False</td>\n",
+        "      <td> 1</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
         "      <td> 3</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 82</td>\n",
+        "      <td> 40</td>\n",
+        "      <td> 0</td>\n",
+        "      <td>-43</td>\n",
+        "      <td>-42</td>\n",
+        "      <td>  True</td>\n",
+        "      <td> 2</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
         "      <td> 0</td>\n",
+        "      <td> 3</td>\n",
+        "      <td> 2</td>\n",
+        "      <td> 40</td>\n",
+        "      <td> 27</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 29</td>\n",
+        "      <td> 36</td>\n",
+        "      <td> False</td>\n",
+        "      <td> 0</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
-        "<p>5 rows \u00d7 1 columns</p>\n",
+        "<p>5 rows \u00d7 10 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "display_data"
       }
      ],
-     "prompt_number": 163
+     "prompt_number": 20
     },
     {
      "cell_type": "heading",
